# claude-code-apps

./: .gitignore
.claude/: CLAUDE.md
04-fetch-url-repo-test/: CLAUDE.md
04-fetch-url-repo-test/.claude/: common-patterns.md  context.md  debug-log.md  project-improvements.md  project-knowledge.md
05-loto6-prediction-number/: README.md  app.py  loto6_prediction_20250617_001319.json  loto6_prediction_20250617_001338.json  loto6_prediction_20250617_001639.json  loto6_predictor.py  main.py  pyproject.toml  requirements.txt  run_app.sh  setup.py
05-loto6-prediction-number/src/: __init__.py
05-loto6-prediction-number/src/loto6_predictor/: __init__.py
05-loto6-prediction-number/src/loto6_predictor/analysis/: advanced_analyzer.py  frequency.py  pattern.py
05-loto6-prediction-number/src/loto6_predictor/core/: predictor.py
05-loto6-prediction-number/src/loto6_predictor/data/: fetcher.py
05-loto6-prediction-number/src/loto6_predictor/prediction/: advanced_engine.py  confidence_scorer.py  strategies.py
05-loto6-prediction-number/src/loto6_predictor/ui/: components.py  styles.py
06-japan-map-crasher/: README.md  app.py  app_wireframe.py  requirements.txt  run_wireframe.py  test_folium.py  test_report.md  test_visual.py
06-japan-map-crasher/templates/: index.html
07-japan-map-fix/: app_folium.py  app_matplotlib.py  main.py  requirements.txt  run_folium.py
07-japan-map-fix/templates/: index.html  map_matplotlib.html
08-claude-code-devcontainer-gen-test/: README.md  pyproject.toml
08-claude-code-devcontainer-gen-test/.devcontainer/: Dockerfile  devcontainer.json
09-aim-game/: README.md  aim_trainer.py  flask_app.py  main.py  requirements.txt  streamlit_app.py  test_game.py  test_streamlit_app.py
10-qwop-like-game/: pyproject.toml
10-qwop-like-game/static/css/: style.css
10-qwop-like-game/static/js/: game.js
10-qwop-like-game/templates/: index.html
11-bonsai/: .gitignore  app.py  pyproject.toml
11-bonsai/static/css/: style.css
11-bonsai/static/js/: bonsai.js
11-bonsai/templates/: index.html
1st-zen-tetris/: .gitignore  CLAUDE.md  README.md  index.html  style.css
2nd-zen-tetris-v2/: .gitignore  CLAUDE.md  README.md  WEB_README.md  main.py  requirements.txt  run_tests.py  start_web.py  tetris.js  web_server.py
3rd-fast-invader-game/: .gitignore  API.md  CLAUDE.md  DEVELOPMENT.md  README.md  index.html  jest.config.js  package.json  style.css  test.html  tsconfig.json
(+48 files in other folders)
