[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loto6-predictor"
version = "1.0.0"
description = "ロト6予測システム"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]

[project.scripts]
loto6-predict = "loto6_predictor.main:main"

[tool.setuptools.packages.find]
where = ["src"]