[project]
name = "claude-code-python-devcontainer"
version = "0.1.0"
description = "Claude Code Python development environment template"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "flask>=3.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "scikit-learn>=1.4.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true