[project]
name = "qwop-like-game"
version = "0.1.0"
description = "A QWOP-like running game"
dependencies = [
    "flask>=2.3.0",
    "gunicorn>=21.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.uv]
dev-dependencies = []