[project]
name = "bonsai-generator"
version = "0.1.0"
description = "A beautiful procedural bonsai tree generator"
dependencies = [
    "flask>=2.3.0",
    "gunicorn>=21.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.uv]
dev-dependencies = []